# XCODE

./: .gitignore
PC_Gestion_M3U/: PC_Gestion_M3U.spec  SPEC_architecture.md  SPEC_fonctionnalites.md  build.bat  main.py  requirements.txt
PC_Gestion_M3U/.claude/: settings.local.json
PC_Gestion_M3U/core/: __init__.py  config_manager.py  exporter.py  filters.py  m3u_parser.py  xtream_client.py
PC_Gestion_M3U/data/: m3u_cache.json
PC_Gestion_M3U/docs_projet_m3u_xtream/: 00_INDEX.md  01_format_m3u.md  02_api_xtream.md  03_python_requests.md  04_flask.md  05_fastapi.md
PC_Gestion_M3U/ui/: __init__.py  channel_table.py  connection_dialog.py  download_dialog.py  filter_panel.py  loading_overlay.py  login_dialog.py  main_window.py  spinner_widget.py  vlc_player.py
Remocut_ISO/: Architecture.md  CLAUDE.md  Fonctionnalités.md  main.py  requirements.txt
Remocut_ISO/Test/: section_002.dxf  section_005.dxf
Remocut_ISO/core/: __init__.py  dxf_reader.py  gcode_generator.py  geometry.py  machine_params.py  nesting.py  nesting_optimise.py  nesting_sparrow.py  trajectory.py
Remocut_ISO/doc/: bilan_gcode_remocut.md
Remocut_ISO/ui/: __init__.py  dxf_list_panel.py  dxf_viewer.py  gcode_viewer.py  main_window.py  nesting_view.py  params_panel.py
Remocut_ISO/utils/: __init__.py  file_io.py
VoiceNotes/: .env.example  README.md  main.py  requirements.txt
VoiceNotes/core/: __init__.py  audio_recorder.py  classifier.py  database.py  transcriber.py
VoiceNotes/data/: voicenotes.db
VoiceNotes/ui/: __init__.py  main_window.py  note_editor_widget.py  note_list_widget.py  recording_bar.py  theme_dialog.py
VoiceNotes/utils/: __init__.py  config.py
WebOS_IPTV_C++/: .gitignore  CMakeLists.txt  appinfo.json
WebOS_IPTV_C++/scripts/: build-host.sh  build.sh  deploy.sh
WebOS_IPTV_C++/src/: main.cpp
WebOS_IPTV_C++/src/app/: KeyCodes.h
WebOS_IPTV_C++/src/platform/: AppLifecycle.cpp  AppLifecycle.h
WebOS_IPTV_C++/src/player/: GstDecoder.cpp  GstDecoder.h  NdlDecoder.cpp  NdlDecoder.h  NdlDecoder_stub.cpp  Playlist.cpp  Playlist.h  SwDecoder.cpp  SwDecoder.h  ndl_bridge.c  ndl_bridge.h
WebOS_IPTV_C++/src/store/: Cache.cpp  Cache.h  Config.cpp  Config.h  Favorites.cpp  Favorites.h  JsonFile.cpp  JsonFile.h  Paths.cpp  Paths.h  WatchHistory.cpp  WatchHistory.h  WatchPosition.cpp  WatchPosition.h
WebOS_IPTV_C++/src/ui/: FocusManager.cpp  FocusManager.h  HomeScreen.cpp  HomeScreen.h  ImageLoader.cpp  ImageLoader.h  PlayerOSD.cpp  PlayerOSD.h  PosterGrid.cpp  PosterGrid.h  SeriesDetailScreen.cpp  SeriesDetailScreen.h  SettingsScreen.cpp  SettingsScreen.h  TextRenderer.cpp  TextRenderer.h
WebOS_IPTV_C++/src/xtream/: CatalogSync.cpp  CatalogSync.h  Models.h  XtreamClient.cpp  XtreamClient.h
WebOS_IPTV_C++/testbench/config/: tv.conf
WebOS_IPTV_Player_V2.0/: ANALYSE_FONCTIONNELLE.md  ARCHITECTURE.md  index.html  package-lock.json  package.json  vite.config.js
WebOS_IPTV_Player_V2.0/ipk/: com.iptv.player_2.0.0_all.ipk
WebOS_IPTV_Player_V2.0/src/: App.jsx  main.jsx
WebOS_IPTV_Player_V2.0/src/constants/: frenchKeywords.js  keycodes.js
WebOS_IPTV_Player_V2.0/src/styles/: focus.css  global.css
iptv_perso/: CLAUDE.md  README.md  package-lock.json  package.json  pubspec.yaml
iptv_perso/android/app/: build.gradle.kts
iptv_perso/ios/Runner/: Info.plist
iptv_perso/ios/Runner.xcodeproj/: project.pbxproj
iptv_perso/lib/: main.dart
iptv_perso/linux/: CMakeLists.txt
iptv_perso/linux/flutter/: generated_plugins.cmake
iptv_perso/linux/runner/: my_application.cc
iptv_perso/macos/Flutter/: GeneratedPluginRegistrant.swift
iptv_perso/macos/Runner.xcodeproj/: project.pbxproj
iptv_perso/test/: widget_test.dart
iptv_perso/web/: index.html  manifest.json
iptv_perso/windows/: CMakeLists.txt
iptv_perso/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
iptv_perso/windows/runner/: Runner.rc  main.cpp
iptv_player_Android_Box_X9T/: report-2026-03-30-08-19-00.txt
iptv_player_PC/: .gitignore  IPTV_Player.spec  build.py  build_exe.bat  build_log.txt  cache_db.py  cache_manager.py  config.py  diagnostic.bat  diagnostic.py  download_manager.py  init_git.bat  install.bat  launch.bat  main.py  main_window.py  play_options_dialog.py  player_window.py  requirements.txt  series_dialog.py  settings_dialog.py  xtream_api.py
iptv_player_PC/.claude/: settings.local.json
iptv_player_SamsungTV_tivimate/: package-lock.json  package.json  renommer_films.py
iptv_player_SamsungTV_tivimate/src/constants/: keyCodes.js
iptv_player_SamsungTV_tivimate/src/screens/: HomeScreen.jsx  SettingsScreen.css  SyncScreen.jsx
iptv_player_SamsungTV_tivimate/src/services/: usbService.js
iptv_player_SamsungTV_tivimate/src/store/: appStore.js
iptv_player_SamsungTV_tivimate/src/styles/: global.css
iptv_player_WebOS_TV/: package-lock.json  vite.config.js  xtream_downloader.py
iptv_player_WebOS_TV/public/: appinfo.json
iptv_player_WebOS_TV/src/: App.jsx  index.jsx
iptv_player_WebOS_TV/src/screens/: HomeScreen.css  HomeScreen.jsx  PlayerScreen.css  PlayerScreen.jsx  SeriesDetailScreen.css  SeriesDetailScreen.jsx  SettingsScreen.css  SettingsScreen.jsx
iptv_player_WebOS_TV/src/services/: favoritesService.js  (+2 more)
iptv_player_WebOS_TV_tivimate/: .gitignore  ANALYSE_FONCTIONNELLE.md  LOGO_FAST_IPTV..xcf  NAVIGATION.md  XtreamDownloader.spec  cors-proxy.mjs  index.html  package-lock.json  package.json  vite.config.js
iptv_player_WebOS_TV_tivimate/docs/: LG_OLED_C1_bilan_technique_complet.md
iptv_player_WebOS_TV_tivimate/public/: appinfo.json  config.xml
iptv_player_WebOS_TV_tivimate/src/: App.jsx
shelly_pompe_piscine/: pompe_v2.js  upload.php
shelly_pompe_piscine/php/: README.md  api.php  db.php  index.php  log.php
stl_slicer/: Arbre.stl  README.md  flasque.stl  main.py  requirements.txt
stl_slicer/Test/: nesting_complet.dxf  section_001.dxf  section_003.dxf  section_004.dxf
stl_slicer/core/: __init__.py  exporter.py  nesting.py  nesting_sparrow.py  slicer.py  stl_loader.py
stl_slicer/ui/: __init__.py  main_window.py  nesting_view.py  viewer_3d.py
(+74 files in other folders)
